--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ h1{
     padding-left: 10px;
 }
 
+
+
 h2{
     padding-left: 20px;
     padding-top: 20px;
@@ -25,7 +27,23 @@ h2{
     padding-left: 20px;
 }
 
+#content p {
+    display: flex;
+    justify-content: space-between;
+}
+#content button {
+    margin-right: 80%;
+}
+
 #trash_content{
     padding-left: 20px;
     padding-top: 20px;
+}
+
+#trash_content p {
+    display: flex;
+    justify-content: space-between;
+}
+#trash_content button {
+    margin-right: 80%;
 }
