--- a/notebook/style.css
+++ b/notebook/style.css
@@ -1,11 +1,11 @@
-h1{
+h1 {
     padding-left: 20px;
     padding-top: 20px;
     text-decoration: underline;
     font-size: 40px;
 }
 
-#note_title_input{
+#note_title_input {
     margin-left: 20px;
     margin-top: 10px;
     width: 300px;
@@ -14,7 +14,7 @@ h1{
     padding-left: 10px;
 }
 
-#note_input{
+#note_input {
     margin-left: 20px;
     margin-top: 10px;
     width: 300px;
@@ -23,34 +23,53 @@ h1{
     padding-left: 10px;
 }
 
-h2{
+h2 {
     padding-left: 20px;
     padding-top: 20px;
     text-decoration: underline;
     font-size: 32px;
 }
 
-#content{
-    padding-left: 20px;
+#content {
+    margin-top: 8px;
+    margin-left: 20px;
+    background-color: beige;
+    width: 300px;
 }
 
 #content p {
-    display: flex;
-    justify-content: space-between;
-}
-#content button {
-    margin-right: 20%;
+    padding-left: 20px;
+    padding-top: 8px;
 }
 
-#trash_content{
-    padding-left: 20px;
-    padding-top: 20px;
+#content button {
+    margin-top: 8px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 55px;
+}
+
+.line {
+    background-color: white;
+    height: 16px;
+    margin-left: 0;
+}
+
+#trash_content {
+    margin-left: 20px;
+    margin-top: 8px;
+    background-color: coral;
+    width: 300px;
+}
+
+#trash_content button {
+    margin-top: 8px;
+    margin-left: 70px;
+    display: flex;
+    flex-direction: column;
 }
 
 #trash_content p {
-    display: flex;
-    justify-content: space-between;
-}
-#trash_content button {
-    margin-right: 20%;
+    margin-left: 20px;
+    padding-top: 8px;
 }
